--- a/Projektowanie warstwy klienta aplikacji webowych/Python kod/Mój_kod_zajęcia/Projektowanie Aplikacji Webowych/Zajęcia_2/memory-front-client/src/app/home/home.component.html
+++ b/Projektowanie warstwy klienta aplikacji webowych/Python kod/Mój_kod_zajęcia/Projektowanie Aplikacji Webowych/Zajęcia_2/memory-front-client/src/app/home/home.component.html
@@ -12,5 +12,13 @@
       <h2 class="text-3xl font-semibold">Nauka</h2>
       <span>Opanuj nowe słówka</span>
     </div>
+
+    <div
+      class="flex cursor-pointer flex-col items-center gap-2 rounded-t-xl border-b-8 border-violet-800 bg-white p-4"
+    >
+      <ng-icon name="heroFolderOpen" size="3em"></ng-icon>
+      <h2 class="text-3xl font-semibold">Baza słówek</h2>
+      <span>Zarządzaj zbiorem swoich fiszek</span>
+    </div>
   </div>
 </div>
