--- a/Projektowanie warstwy klienta aplikacji webowych/Python kod/Mój_kod_zajęcia/Projektowanie Aplikacji Webowych/Zajęcia_2/memory-front-client/src/app/home/home.component.html
+++ b/Projektowanie warstwy klienta aplikacji webowych/Python kod/Mój_kod_zajęcia/Projektowanie Aplikacji Webowych/Zajęcia_2/memory-front-client/src/app/home/home.component.html
@@ -16,6 +16,7 @@
     </div>
 
     <div
+      routerLink="categories"
       class="flex cursor-pointer flex-col items-center gap-2 rounded-t-xl border-b-8 border-violet-800 bg-white p-4"
     >
       <ng-icon name="heroFolderOpen" size="3em"></ng-icon>
