--- a/Projektowanie warstwy klienta aplikacji webowych/Python kod/Mój_kod_zajęcia/Projektowanie Aplikacji Webowych/Zajęcia_2/memory-front-client/src/app/wordbank/cards/cards.component.html
+++ b/Projektowanie warstwy klienta aplikacji webowych/Python kod/Mój_kod_zajęcia/Projektowanie Aplikacji Webowych/Zajęcia_2/memory-front-client/src/app/wordbank/cards/cards.component.html
@@ -1,1 +1,27 @@
-<p>cards works!</p>
+<div class='flex flex-col gap-4'>
+  <app-back-link path='../../'></app-back-link>
+
+  <div class='flex flex-col gap-2' *ngIf='cards$ | async as cards'>
+    <ng-container *ngIf='cards.length; else noCards'>
+      <div class='flex cursor-pointer items-center gap-4' *ngFor='let c of cards'>
+        <div class='white-list-item divide-y'>
+          <div class='p-2'>{{c.term}}</div>
+          <div class='p-2'>{{c.definition}}</div>
+        </div>
+
+        <button (click)='removeCard(c.category_id, c.id)'>
+          <ng-icon name='heroNoSymbol'></ng-icon>
+        </button>
+
+      </div>
+    </ng-container>
+
+    <ng-template #noCards>
+      <div class='text-center'>
+        Nie posiadasz żadnych fiszek w tej kategorii
+      </div>
+    </ng-template>
+
+  </div>
+
+</div>
