--- a/Zaawansowane aplikacje webowe z wykorzystaniem Django/django_wprowadzenie/basics/templates/basics/country.html
+++ b/Zaawansowane aplikacje webowe z wykorzystaniem Django/django_wprowadzenie/basics/templates/basics/country.html
@@ -6,6 +6,11 @@
 </head>
 <body>
 <div>Kraj: {{ country.country|upper }}</div>
+{% if country.capital is not None %}
+    <div>Stolica: {{ country.capital }}</div>
+{% else %}
+    <div style="color: red">Kraj nie posiada stolicy</div>
+{% endif %} 
 <div>Stolica: {{ country.capital }}</div>
 <div>Kod: {{ country.cc|lower }}</div>
 <div>Numer kierunkowy: {{ country.iac }}</div>
