--- a/Zaawansowane aplikacje webowe z wykorzystaniem Django/movies/templates/movie_base.html
+++ b/Zaawansowane aplikacje webowe z wykorzystaniem Django/movies/templates/movie_base.html
@@ -13,6 +13,17 @@
     <script src="{% static 'js/uikit-icons.min.js' %}"></script>
 </head>
 <body>
-{% block page_content %}{% endblock %}
+
+<div uk-height-viewport="offset-bottom:0" class="uk-flex">
+    <div class="uk-width-small side-bar uk-flex uk-flex-column uk-padding-small gap-small">
+        {% include 'menu_button.html' with url_name='all_movies_url' icon='home' name='Home' %}
+        {% include 'menu_button.html' with url_name='all_movies_url' icon='video-camera' name='Filmy' %}
+    </div>
+    <div class="uk-width-expand">
+        <div class="uk-container">
+        {% block page_content %}{% endblock %}
+        </div>
+    </div>
+</div>
 </body>
 </html>
