--- a/Zaawansowane aplikacje webowe z wykorzystaniem Django/movies/movie/templates/movie/all_movies.html
+++ b/Zaawansowane aplikacje webowe z wykorzystaniem Django/movies/movie/templates/movie/all_movies.html
@@ -5,6 +5,12 @@
 {% endblock %}
 
 {% block page_content %}
+    <div class="uk-flex uk-flex-between uk-margin-large-top">
+        <div>Liczba filmów: {{ aggregation_data.id__count }}</div>
+        <div>Średnia ocena: {{ aggregation_data.vote_average__avg|floatformat:2 }}</div>
+        <div>Min. ocena: {{ aggregation_data.vote_average__min|floatformat:2 }}</div>
+        <div>Max. ocena: {{ aggregation_data.vote_average__max|floatformat:2 }}</div>
+    </div>
 	<table class="uk-table uk-table-striped">
         <thead>
         <tr>
@@ -25,7 +31,7 @@
             <td>{{ movie.vote_count }}</td>
             <td>{{ movie.vote_average|floatformat:2 }}</td>
             <td>
-                <a href="{% url 'movie_details_url' tmdb_id=movie.tmdb_id %}">Szczegóły</a>
+                <a href="{% url 'movie_details_url' id=movie.id %}">Szczegóły</a>
             </td>
             </tr>
         {% endfor %}
